--- a/index.html
+++ b/index.html
@@ -195,9 +195,18 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>Trapped and Transferred: Skill Constraints and Geographic Frictions in the Energy Transition</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)</h5>
-                        <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)</h5>
-                        <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from the US Coal Communities</b><br><u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)</h5>
+                        <h5 class="h5 mb-4 text-black"><b>Trapped and Transferred: Skill Constraints and Geographic Frictions in the Energy Transition</b>
+                            <span style="display: block; margin-top: 7.5px;">
+                                <u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)
+                            </span>
+                        <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b>
+                            <span style="display: block; margin-top: 7.5px;">
+                                <u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)
+                            </span>
+                        <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from the US Coal Communities</b>
+                            <span style="display: block; margin-top: 7.5px;">
+                                <u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)
+                            </span>
                         <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b></a>
                             <span style="display: block; margin-top: 7.5px;">
                                 Anderson, Michael, <u style="text-underline-offset: 5px;">Minwoo Hyun</u>, and Jaecheol Lee (2022)
@@ -247,12 +256,12 @@
                             <span style="display: block; margin-top: 7.5px;">
                                 Eom, Jiyong, <u style="text-underline-offset: 5px;">Minwoo Hyun</u>, Jaewoong Lee, and Hyoseop Lee (2020)
                             </span>
-                            <em style="margin-top: 7.5px; display: inline-block;">Nature Energy</em></h5>
+                            <div style="margin-top: 7.5px;"><em>Nature Energy</em></h5>
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918"><b>Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</b></a>
                             <span style="display: block; margin-top: 7.5px;">
                                 <u style="text-underline-offset: 5px;">Hyun, Minwoo</u>, Yeongjae Kim, and Jiyong Eom (2020)
                             </span>
-                            <em style="margin-top: 7.5px; display: inline-block;">Energy Policy</em>
+                            <div style="margin-top: 7.5px;"><em>Energy Policy</em>
                     </div>
                 </div>
             </div>
