--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <span style="display: block; margin-top: 7.5px;">
                                 <u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)
                             </span>
-                        <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from the US Coal Communities</b>
+                        <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from US Coal Communities</b>
                             <span style="display: block; margin-top: 7.5px;">
                                 <u style="text-underline-offset: 5px;">Hyun, Minwoo</u> (2025)
                             </span>
