--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                         <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from US Coal Communities</b>
 
                         <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b></a>
-                            <span style="display: block; margin-top: 7.5px; font-size: 10px;"></span>
+                            <span style="display: block; margin-top: 7.5px; font-size: 16px;"></span>
                                 (with Michael Anderson and Jaecheol Lee)
                             </span>
-                            <div style="margin-top: 7.5px;">Conditionally Accepted, <em>The Economic Journal</em></div>
+                            <div style="margin-top: 7.5px; font-size: 16px;">Conditionally Accepted, <em>The Economic Journal</em></div>
                     </div>
                 </div>
 
@@ -241,21 +241,21 @@
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.rset.2023.100050"><b>Feasibility trade-offs in decarbonisation of power sector with high coal dependence: A case of Korea</b></a>
-                            <span style="display: block; margin-top: 7.5px; font-size: 10px;">
+                            <span style="display: block; margin-top: 7.5px; font-size: 16px;">
                                 (with Aleh Cherp, Jessica Jewell, Youngjae Kim, and Jiyong Eom)
                             </span>
-                            <div style="margin-top: 7.5px;"><em>Renewable and Sustainable Energy Transition</em> (2023)</div>
+                            <div style="margin-top: 7.5px; font-size: 16px;"><em>Renewable and Sustainable Energy Transition</em> (2023)</div>
                                 <!-- <em style="margin-top: 7.5px; display: inline-block;">Renewable and Sustainable Energy Transition</em></h5> -->
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1038/s41560-020-00698-1"><b>Increase in household energy consumption due to ambient air pollution</b></a>
-                            <span style="display: block; margin-top: 7.5px; font-size: 10px;">
+                            <span style="display: block; margin-top: 7.5px; font-size: 16px;">
                                 (with Jiyong Eom, Jaewoong Lee, and Hyoseop Lee)
                             </span>
-                            <div style="margin-top: 7.5px;"><em>Nature Energy</em> (2020)</h5>
+                            <div style="margin-top: 7.5px; font-size: 16px;"><em>Nature Energy</em> (2020)</h5>
                         <h5 class="h5 mb-4 text-black"><a href="https://doi.org/10.1016/j.enpol.2020.111918"><b>Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment</b></a>
-                            <span style="display: block; margin-top: 7.5px; font-size: 10px;">
+                            <span style="display: block; margin-top: 7.5px; font-size: 16px;">
                                 (with Yeongjae Kim and Jiyong Eom)
                             </span>
-                            <div style="margin-top: 7.5px;"><em>Energy Policy</em> (2020)</h5>
+                            <div style="margin-top: 7.5px; font-size: 16px;"><em>Energy Policy</em> (2020)</h5>
                     </div>
                 </div>
             </div>
