--- a/index.html
+++ b/index.html
@@ -200,11 +200,13 @@
                         <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b>
 
                         <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from US Coal Communities</b>
-
-                        <h5 class="h5 mb-4 text-black"><a href="https://www.nber.org/papers/w29637"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b></a>
+                            <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://drive.google.com/file/d/1L2MWX9penimVw-88Rv8N-9QC9gtao4PW/view?usp=sharing">[Paper]</a></div>
+                            
+                        <h5 class="h5 mb-4 text-black"><b>Bounds, Benefits, and Bad Air: Welfare Impacts of Pollution Alerts</b>
                             <span style="display: block; margin-top: 7.5px; font-size: 18px;">
                                 (with Michael Anderson and Jaecheol Lee)
                             </span>
+                            <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://www.nber.org/papers/w29637">[NBER WP]</a></div>
                             <div style="margin-top: 7.5px; font-size: 18px;">Conditionally Accepted, <em>The Economic Journal</em></div>
                     </div>
                 </div>
