--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 
-        <div class="site-blocks-cover overlay" style="background-image: url(images/background_figure1.jpg);" data-aos="fade" id="home-section">
+        <!-- <div class="site-blocks-cover overlay" style="background-image: url(images/background_figure1.jpg);" data-aos="fade" id="home-section">
 
             <div class="container">
                 <div class="row align-items-center justify-content-center">
@@ -111,12 +111,12 @@
 
                     <div class="col-md-8 mt-lg-5 text-center">
                         <h1 class="text-uppercase" data-aos="fade-up">Minwoo Hyun</h1>
-                        <!-- <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Quantum Physicist/Engineer, Machine Learning Engineer</p> -->
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Quantum Physicist/Engineer, Machine Learning Engineer</p> -->
                         <!-- <div data-aos="fade-up" data-aos-delay="100">
                             <a href="#contact-section" class="btn smoothscroll btn-primary mr-2 mb-2">Get In Touch</a>
                             <a href="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" class="btn smoothscroll btn-primary mr-2 mb-2">Download CV</a>
                         </div> -->
-                    </div>
+                    <!-- </div>
 
                 </div>
             </div>
@@ -126,7 +126,7 @@
           <span class="mouse-wheel"></span>
                 </span>
             </a>
-        </div>
+        </div> -->
 
 
         <div class="site-section cta-big-image" id="about-section">
