--- a/index.html
+++ b/index.html
@@ -111,12 +111,7 @@
 
                     <div class="col-md-8 mt-lg-5 text-center">
                         <h1 class="text-uppercase" data-aos="fade-up">Minwoo Hyun</h1>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Quantum Physicist/Engineer, Machine Learning Engineer</p> -->
-                        <!-- <div data-aos="fade-up" data-aos-delay="100">
-                            <a href="#contact-section" class="btn smoothscroll btn-primary mr-2 mb-2">Get In Touch</a>
-                            <a href="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view?usp=sharing" class="btn smoothscroll btn-primary mr-2 mb-2">Download CV</a>
-                        </div> -->
-                    <!-- </div>
+                    </div>
 
                 </div>
             </div>
