--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="site-wrap">
 
-        <div class="site-mobile-menu site-navbar-target">
+        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
                     <span class="icon-close2 js-menu-toggle"></span>
