--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
     <div class="site-wrap">
 
-        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-        <!-- <header class="site-navbar py-4 site-navbar-target" role="banner"></header> -->
+        <div class="site-mobile-menu site-navbar-target">
             <div class="site-mobile-menu-header">
                 <div class="site-mobile-menu-close mt-3">
                     <span class="icon-close2 js-menu-toggle"></span>
@@ -64,7 +63,8 @@
         </div>
 
 
-        <header class="site-navbar py-4 site-navbar-target" role="banner">
+        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner"></header>
+        <!-- <header class="site-navbar py-4 site-navbar-target" role="banner"> -->
 
             <div class="container">
                 <div class="row align-items-center">
