--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
 
-        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner"></header>
+        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
         <!-- <header class="site-navbar py-4 site-navbar-target" role="banner"> -->
 
             <div class="container">
