--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
-
     <div id="overlayer"></div>
     <div class="loader">
         <div class="spinner-border text-primary" role="status">
@@ -63,8 +62,8 @@
         </div>
 
 
-        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-        <!-- <header class="site-navbar py-4 site-navbar-target" role="banner"> -->
+        <!-- <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner"> -->
+        <header class="site-navbar py-4 site-navbar-target" role="banner">
 
             <div class="container">
                 <div class="row align-items-center">
