--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>Trapped and Transferred: Skill Constraints and Geographic Frictions in the Energy Transition</b>
+                        <h5 class="h5 mb-4 text-black"><b>Trapped or Transferred: Skill Constraints and Labor Market Power in the Energy Transition</b>
 
                         <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b>
 
