--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
                     <div class="col-12">
                         <!-- <ul class="list-unstyled ul-check success text-black"> -->
                         <!-- <ul class="list-unstyled text-black"></ul> -->
+                        <h6 class="h6 mb-4 text-black"><b>Western Economic Association International (WEAI) Annual Conference (2025)</b><br>Oral Presentation in Concurrent Session; San Francisco (CA), the United States</h6>
+
+                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2025)</b><br>Oral Presentation in Concurrent Session; Albuquerque (NM), the United States</h6>
+
                         <h6 class="h6 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b><br>Oral Presentation; Cambridge (MA), the United States</h6>
 
                         <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b><br>Oral Presentation in Concurrent Session; Washington (DC), the United States</h6>
