--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
-                        <h5 class="h5 mb-4 text-black"><b>Trapped or Transferred: Skill Constraints and Labor Market Power in the Energy Transition</b>
+                        <h5 class="h5 mb-4 text-black"><b>Trapped or Transferred: Worker Mobility and Labor Market Power in the Energy Transition</b>
 
                         <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b>
 
@@ -298,19 +298,17 @@
                     <div class="col-12">
                         <!-- <ul class="list-unstyled ul-check success text-black"> -->
                         <!-- <ul class="list-unstyled text-black"></ul> -->
-                        <h6 class="h6 mb-4 text-black"><b>Western Economic Association International (WEAI) Annual Conference (2025)</b><br>Oral Presentation in Concurrent Session; San Francisco (CA), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>Camp Resources XXXI (2025)</b></h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2025)</b><br>Oral Presentation in Concurrent Session; Albuquerque (NM), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>AERE Annual Summer Conference (2023; 2024; 2025)</b></h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b><br>Oral Presentation; Cambridge (MA), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>WEAI Annual Conference (2023; 2025)</b></h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2024)</b><br>Oral Presentation in Concurrent Session; Washington (DC), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>UCSB Occasional Workshop (2023)</b></h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Western Economic Association International (WEAI) Annual Conference (2023)</b><br>Oral Presentation in Concurrent Session; San Diego (CA), the United States</h6>
+                        <h6 class="h6 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b></h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>Association of Environmental and Resource Economists (AERE) Annual Summer Conference (2023)</b><br>Oral Presentation in Concurrent Session; Portland (ME), the United States</h6>
-
-                        <h6 class="h6 mb-4 text-black"><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b><br>Oral Presentation in Long-Talk Session; London, the United Kingdom</h6>
+                        <h6 class="h6 mb-4 text-black"><b>London School of Economics and Political Science (LSE) Environment Day (2023)</b></h6>
 
                         <!-- </ul> -->
                     </div>
