--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4 text-black">
                             <!-- <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3> -->
-                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">I am a fifth-year Ph.D. candidate in Economics at the UC Santa Barbara, and a Special Sworn Researcher with the U.S. Census Bureau. My research focuses on the economics of energy and the environment, with a particular interest in labor and public policy issues. Currently, I am investigating the economic challenges of the energy transition, including the labor reallocation of fossil fuel workers and the fiscal impacts on coal-dependent local governments. I will be on the 2025–26 academic job market.</h5>
+                            <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">I am a sixth-year Ph.D. candidate in Economics at the UC Santa Barbara, and a Special Sworn Researcher with the U.S. Census Bureau. My research focuses on the economics of energy and the environment, with a particular interest in labor and public policy issues. Currently, I am investigating the economic challenges of the energy transition, including the labor reallocation of fossil fuel workers and the fiscal impacts on coal-dependent local governments. I will be on the 2025–26 academic job market.</h5>
                             <h5 class="h5 mb-4 text-black" style="line-height: 1.75;">Email: minwoohyun12[at]gmail.com</h5>
                             <h5 class="h5 mb-4 text-black" style="line-height: 1.75;"><a href="https://drive.google.com/file/d/1KfDgJcnf2b96ZogAK2yl_tagKPPDkErB/view"><b>CV</b></a> | <a href="https://scholar.google.co.kr/citations?user=U4vjKx8AAAAJ&hl=en&oi=ao"><b>Google Scholar</b></a></h5>
                             <!-- <p>I am a Ph.D. candidate in Economics at the University of California, Santa Barbara. My research interests include the economics of the energy and environment and policy issues relevant to labor, health, and inequality. I am currently studying the economic costs of energy transition such as labor reallocation costs of fossil fuel workers and fiscal rupture in coal-rich local governments.</p> -->
@@ -192,8 +192,11 @@
                     <div class="col-12">
                         <!-- <h3 class="h3 mb-4 text-black">2020 - 2021</h3> -->
                         <h5 class="h5 mb-4 text-black"><b>Trapped or Transferred: Worker Mobility and Labor Market Power in the Energy Transition</b>
+                            <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://drive.google.com/file/d/10FLWdKC6vwJc4I44EVPh5lzPQEgz73ao/view?usp=sharing">[Job Market Paper]</a></div>
+                            <!-- <div style="margin-top: 7.5px; font-size: 18px;">Conditionally Accepted, <em>The Economic Journal</em></div> -->
 
                         <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b>
+                            <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://drive.google.com/file/d/1UI4ZldyKdYyVUsOZ9G-U2DRcpIr-ynel/view?usp=sharing">[Working Paper]</a></div>
 
                         <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from US Coal Communities</b>
                             <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://drive.google.com/file/d/1L2MWX9penimVw-88Rv8N-9QC9gtao4PW/view?usp=sharing">[Paper]</a></div>
