--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <!-- <div style="margin-top: 7.5px; font-size: 18px;">Conditionally Accepted, <em>The Economic Journal</em></div> -->
 
                         <h5 class="h5 mb-4 text-black"><b>Fossil Fuels and Fiscal Federalism: How Intergovernmental Transfers Respond to Local Coal Industry Declines</b>
-                            <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://drive.google.com/file/d/1UI4ZldyKdYyVUsOZ9G-U2DRcpIr-ynel/view?usp=sharing">[Working Paper]</a></div>
+                            <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://drive.google.com/file/d/1UI4ZldyKdYyVUsOZ9G-U2DRcpIr-ynel/view?usp=sharing">[Paper]</a></div>
 
                         <h5 class="h5 mb-4 text-black"><b>Industrial Decline Raises Juvenile Antisocial Behavior: Evidence from US Coal Communities</b>
                             <div style="margin-top: 7.5px; font-size: 18px;"><a href="https://drive.google.com/file/d/1L2MWX9penimVw-88Rv8N-9QC9gtao4PW/view?usp=sharing">[Paper]</a></div>
