--- a/index.html
+++ b/index.html
@@ -301,13 +301,19 @@
                     <div class="col-12">
                         <!-- <ul class="list-unstyled ul-check success text-black"> -->
                         <!-- <ul class="list-unstyled text-black"></ul> -->
+                        <h6 class="h6 mb-4 text-black"><b>EPA National Center for Environmental Economics (NCEE) Seminar (2025)</b></h6>
+
+                        <h6 class="h6 mb-4 text-black"><b>CU Environmental & Resource Economics Workshop (2025)</b></h6>
+
+                        <h6 class="h6 mb-4 text-black"><b>All-California Labor Economics Conference (2025)</b></h6>
+
                         <h6 class="h6 mb-4 text-black"><b>Camp Resources XXXI (2025)</b></h6>
 
                         <h6 class="h6 mb-4 text-black"><b>AERE Annual Summer Conference (2023; 2024; 2025)</b></h6>
 
                         <h6 class="h6 mb-4 text-black"><b>WEAI Annual Conference (2023; 2025)</b></h6>
 
-                        <h6 class="h6 mb-4 text-black"><b>UCSB Occasional Workshop (2023)</b></h6>
+                        <h6 class="h6 mb-4 text-black"><b>UCSB Occasional Workshop (2023; 2025)</b></h6>
 
                         <h6 class="h6 mb-4 text-black"><b>Harvard Kennedy School Climate Economics Pipeline Workshop (2024)</b></h6>
 
