--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="row">
                     <div class="col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure>
-                            <img src="images/IMG_2201.png" alt="Image" class="img-fluid">
+                            <img src="images/headshot_minwoo_251106.jpeg" alt="Image" class="img-fluid">
                         </figure>
                     </div>
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
